--- a/ContinueCountdown/ContinueCountdown.csproj
+++ b/ContinueCountdown/ContinueCountdown.csproj
@@ -34,6 +34,13 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="Resources/**" />
+
+		<None Include="../.editorconfig" />
+		<None Include="../.gitignore" />
+		<None Include="../LICENSE" />
+		<None Include="../package.json" />
+		<None Include="../README.md" />
+		<None Include="../README.zh.md" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -59,6 +66,10 @@
 		</Reference>
 		<Reference Include="MMHOOK_Assembly-CSharp">
 			<HintPath>$(HKModdingApi)/MMHOOK_Assembly-CSharp.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Osmi">
+			<HintPath>$(HKModRefs)/Osmi/Osmi.dll</HintPath>
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="MagicUI">
